# Learning

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-07-25_add_user_table.py  2024-07-26_add_is_admin.py  2024-07-29_add_nullable_email.py  2024-07-29_add_telegram_id.py  2024-07-29_delete_password_field.py
src/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logs.py  main.py  models.py  schemas.py
src/abstract/: __init__.py  repository.py  service.py
src/auth/: __init__.py  config.py  dependencies.py  exceptions.py  repository.py  router.py  schemas.py  service.py  utils.py
src/base/: __init__.py  base_repository.py  base_schema.py  base_service.py  postgres_repository.py  schema.py
src/bot/: config.py  main.py
src/bot/messages/: __init__.py  start.py
src/bot/routers/: __init__.py  start.py
src/common/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py  utils.py
src/mixins/: __init__.py  repository_postgres.py
src/mixins/repository/: __init__.py  postgresql.py
src/users/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/users/auth/: __init__.py  dependencies.py  router.py  schemas.py  utils.py
tests/: __init__.py  conftest.py  repository.py  tes.py
tests/api/: test_user_router.py
