[tool.poetry]
name = "learningbestcode"
version = "0.1.0"
description = "Поднимаю свои навыки написания чистого кода, использую FastAPI best practies, чистую архитектуру и различные другие подходы."
authors = ["Starobogatov Alexey <Starobogatov.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic = "^2.8.2"
asyncpg = "^0.29.0"
uvicorn = "^0.30.3"
aiogram = "^3.10.0"
redis = "^5.0.7"
APScheduler = "^3.10.4"
httpx = "^0.27.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
